overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment
  labels:
    app: spring-app-deployment
  namespace: learning
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      name: spring-app
      labels:
        app: spring-app
      namespace: learning
    spec:
      containers:
        - image: mchhikara/spring-app:v1.0
          imagePullPolicy: Always
          name: spring-app
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: cert-vol
              mountPath: config/secret
              readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: cert-vol
          secret:
            secretName: test-cer
