overlays/dev/rollout-patch.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spring-app-deployment
  labels:
    app: spring-app-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: spring-app
