overlays/dev/ingress-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-active-ingress
spec:
  rules:
    - host: springtestapp.com
      http:
        paths:
          - backend:
              service:
                name: spring-app-active-svc
                port:
                  number: 5001
            path: /learn-spring
            pathType: Prefix
