overlays/dev/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-preview-ingress
spec:
  rules:
    - host: springtestapp-preview.com
      http:
        paths:
          - backend:
              service:
                name: spring-app-preview-svc
                port:
                  number: 5001
            path: /learn-spring
            pathType: Prefix
